--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale à l'accordéon - Mariage, soirée, cocktail...
+	Musique pour événementiel - Mariage, soirée, cocktail...
 {% endblock %}
 
 {% block metadesc %}
@@ -19,7 +19,7 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Animations musicales</h1>
+			<h1 class="section-title">Événementiel et animations musicales</h1>
 
 			<p>
 				Jérémy DUTHEIL vous propose avec son accordéon des formules sur mesures pour <strong>l'animation musicale</strong> de votre cocktail, fête ou soirée d'entreprise ; seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement.
@@ -127,51 +127,115 @@
 				<a class="btn btn-primary" href="{{ path('accordeoniste_soiree') }}">Plus d'informations</a>
 			</p>
 
-			<h2 class="section-title section-title--small" style="margin-top: 20px;">En groupe, pour plus d'énergie</h2>
+			<h2 class="section-title section-title--small" style="margin-top: 20px;">Le groupe de jazz manouche</h2>
 
 			<p>
-				Vous cherchez un <strong><a href="{{ path('musiciens_soirees') }}" style="color: #000000;">groupe de musique</a></strong> pour votre soirée ou événement, plutôt qu'un musicien seul ? Jérémy propose également de nombreuses formules, où lui et son accordéon sont rejoints par d'autres instrumentistes ; les formations sont variées, en fonction de vos envies et de votre budget. En voici quelque exemples, n'hésitez pas à <a href="{{ path('contact') }}">envoyer un message</a> pour plus d'informations.
+				Le jazz manouche est le style musical par excellence pour l'événementiel : musique virtuose mais toutefois discrète, elle s'intègrera parfaitement dans l'ambiance de votre cocktail d'entreprise ou votre vernissage d'exposition, par exemple. Musiciens professionnels, nous prenons en charge l'aspect technique et la sonorisation (si nécessaire), de manière autonome ; nous proposons des formules du <strong>duo</strong> au <strong>quintet</strong>, dont voici ci-dessous quelques extraits.
 			</p>
-
-			<ul>
-				<li>
-					<strong>Duo accordéon / chant</strong> : les grands standards de la <strong>chanson française</strong>, ainsi que quelque pépites moins connues !
-				</li>
-
-				<li>
-					<strong>Duo accordéon / guitare</strong> : répertoire de <strong>standards jazz</strong>, balades, ...
-				</li>
-
-				<li>
-					<strong>Trio accordéon / guitare / contrebasse ou accordéon / 2 guitares</strong> : les grands classiques du <strong>jazz manouche</strong> !
-				</li>
-
-				<li>
-					Et bien d'autres...
-				</li>
-			</ul>
 
 			<div class="row">
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<a href="https://www.youtube.com/watch?v=W_uOwoGcBuE" target="_blank">https://www.youtube.com/watch?v=W_uOwoGcBuE</a>
-					</p>
 				</div>
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-
-					<p class="text-center" style="margin-top: 15px;">
-						<a href="https://www.youtube.com/watch?v=gtqG5br0M60" target="_blank">https://www.youtube.com/watch?v=gtqG5br0M60</a>
-					</p>
 				</div>
 			</div>
+
+			<p style="margin-top: 10px;">
+				<a class="btn btn-primary" href="{{ path('manouche') }}">Plus d'informations</a>
+			</p>
+
+			<h2 class="section-title section-title--small" style="margin-top: 20px;">Formules avec chanteuse</h2>
+
+			<p>
+				Pour un événement plus participatif, ou simplement parce que vous aimez le chant, je vous conseille les formules avec chanteuse ; essentiellement basées sur la chanson française (Piaf, Montand, Barbara, Trenet, ...), nous pouvons aussi proposer des reprises anglosaxones et des répertoires <i>jazz</i>. Nos formations commencent au duo accordéon / voix en toute intimité, mais peuvent suivant vos envies également inclure d'autres musiciens (guitare, basse, batterie, piano, violon, ...). N'hésitez pas à <a href="{{ path('contact') }}"  rel="nofollow">nous contacter</a> pour nous exposer votre projet.
+			</p>
+
+			<h3 class="section-title section-title--smaller">Marjolaine Piémont</h3>
+
+			<img style="display: block; max-width: 50%; margin: auto; margin-bottom: 15px;" src="img/marjolaine.jpg" alt="Marjolaine Piémont">
+
+			<p>
+				J'ai la chance de travailler avec Marjolaine Piémont, personnalité bien ancrée dans la scène française ; notamment connue pour ses participations à <strong>Mozart l'Opéra Rock</strong> ou <strong>Sol en Cirque</strong>, Marjolaine poursuit également une carrière sous son propre nom, qui l'a mené entre autres aux premières partie de Zazie en 2016, et à plusieurs tournées au Japon.
+			</p>
+
+			<p>
+				Très habituée à l'événementiel où elle a fait ses débuts (Pierre Cardin, Maxim's, ...), Marjolaine propose un vaste répertoire de <strong>chanson française</strong> et de <strong>jazz</strong>, dédié à vos soirées et événements. Nous sommes disponibles en duo accordéon / voix, ou avec d'autres instrumentistes sur demande ; n'hésitez pas à <a href="{{ path('contact') }}" rel="nofollow">nous contacter</a> pour en savoir plus.
+			</p>
+
+			<div class="row" style="margin-bottom: 20px;">
+				<div class="col-md-4">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bmoR95qUdoQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lTg9VePoQXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bfz5R9j6I-8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h3 class="section-title section-title--smaller">Leslie Marquis</h3>
+
+			<p>
+				Avec Leslie Marquis, nous vous proposons un répertoire <strong>chanson française</strong> en duo accordéon / voix, de Brel à Barbara, en passant par Pink Martini et Charles Trenet...
+			</p>
+
+			<div class="row justify-content-center" style="margin-bottom: 20px;">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/k9SY8saaY3I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h3 class="section-title section-title--smaller">Cid Marquis</h3>
+
+			<p>
+				Formule particulière avec Cid Marquis, car nous vous proposons un concert <strong>hommage à Edith Piaf</strong> ; pendant environ 1h15, laissez vous emporter par les plus beaux morceaux de La Môme. Vous entendrez bien entendu les grands classiques (La Foule, Padam, Milord, L'accordéoniste...), mais également certaines pépites moins entendues du grand public (Polichinelle, Mon Apéro, ...). En duo accordéon / voix, dans la plus grande simplicité !
+			</p>
+
+			<div class="row justify-content-center" style="margin-bottom: 20px;">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h3 class="section-title section-title--smaller">Marie Pétrolette</h3>
+
+			<p>
+				Marie Pétrolette évolue à la scène avec ses propres chansons : des textes qui racontent la vie d'une jeune femme moderne, sur une musique plutôt festive. En duo accordéon / voix, nous proposons une formule "concert" autour des chansons de Marie essentiellement, mais également des formules "animations" où nous reprenons un répertoire plus large de chanson française (Bourvil, Odette Laure, Frehel, ...).
+			</p>
+
+			<div class="row justify-content-center" style="margin-bottom: 20px;">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/o91BGe2Xaac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h2 class="section-title section-title--small" style="margin-top: 20px;">Votre événement sur mesure</h2>
+
+			<p>
+				Toutes ces formules vous sont proposées à titre d'exemple ; pour votre événement, vous choisissez tout ! Le style musical, l'orientation du répertoire, les instruments présents (l'accordéon restant une constante ;) ), ... N'hésitez pas à <a href="{{ path('contact') }}" rel="nofollow">me contacter</a> afin de discuter de votre soirée ! 
+			</p>
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
 
