--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -117,7 +117,7 @@
                         <li class="nav-item px-2 py-1">
                             <a class="nav-link {% if route == 'animations' %}nav-link--active{% endif %}"
                                 href="{{ path('animations') }}" title="Trouver un musicien ou groupe de musique pour votre soirée">
-                                Animations
+                                Événementiel
                             </a>
                         </li>
 
