--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -16,7 +16,9 @@
     .flash-ghost--blog { height: 10vh; }
 
 	.flash-item__content {
+        margin-top: 150px;
 		display: block;
+        position: relative;
 	}
 
     .flash-item {
@@ -34,5 +36,24 @@
 
     .section-title {
         font-size: 50px;
+    }
+
+    .flash-item__content-title {
+        font-size: 60px;
+    	line-height: 80px;
+        margin: 0 0 31px 0;
+        padding: 34px 0 0;
+    }
+
+    .flash-item__content-text {
+        font-size: 24px;
+        line-height: 30px;
+        padding: 0 40px 0 0;
+        margin-bottom: 30px;
+    }
+
+    .flash-item__content-btn {
+    	font-size: 18px;
+    	line-height: 26px;
     }
 }
