--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -111,8 +111,8 @@
                             </a>
 
                             <div class="dropdown-menu" aria-labelledby="about">
-                                <a class="dropdown-item" href="{{ path('bio') }}">Biographie</a>
-                                <a class="dropdown-item" href="{{ path('collaborations') }}">Collaborations artistiques</a>
+                                <a class="dropdown-item" href="{{ path('bio') }}" rel="nofollow">Biographie</a>
+                                <a class="dropdown-item" href="{{ path('collaborations') }}" rel="nofollow">Collaborations artistiques</a>
                             </div>
                         </li>
 
