--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
 					Vous cherchez un accordéoniste pour un mariage, un anniversaire, <br>une soirée d'entreprise ou une animation seniors à Paris, Ile de France ou dans toute la France ?
 				</p>
 
-				<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">Découvrir les formules d'animations musicales</a>
+				<a href="{{ path('animations') }}" class="btn btn-secondary flash-item__content-btn">Découvrir les formules <span class="d-none d-md-inline">d'animations musicales</span></a>
 			</div>
 			<!-- /.flash-item__content -->
 		</div>
