--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -72,7 +72,7 @@
 						<h2 class="section-title section-title--blank">Mariage, soirée, cocktail . . .</h2>
 
 						<p class="txt--blank">
-							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un repas en musique ou au vin d'honneur de votre mariage, mais également jouer du musette pour faire danser les seniors en début de soirée (ou pour un anniversaire, par exemple).
+							L'accordéon, de par sa richesse et sa diversité musicales, se prête particulièrement bien au jeu de l'<strong>animation musicale</strong> ; fort d'une expérience certaine, je propose un répertoire varié qui plaira à tout type de public. Ici il ne s'agit pas d'un concert classique, mais de s'adapter en fonction de votre lieu et de vos attentes ; je peux aussi bien me faire discret et jouer des standards de jazz lors d'un repas en musique ou au vin d'honneur de <a href="{{ path('animations_mariages') }}">votre mariage</a>, mais également jouer du musette pour faire danser les seniors en début de soirée (ou pour un anniversaire, par exemple).
 						</p>
 
 						<p class="txt--blank">
