--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -40,7 +40,7 @@
             <h2 class="section-title section-title--small">Des styles musicaux variés</h2>
 
             <p>
-                L'accordéon, tout comme le piano, est un instrument parfaitement adapté à l'expression musicale en solo ; riche et complexe, il permet à l'accordéoniste non seulement de jouer les mélodies, mais également de s'accompagner soi-même. Souvent rangé dans la case "<i>musette</i>", on peut pourtant l'entendre dans de nombreux styles musicaux dans lesquels il s'intègre parfaitement.
+                L'accordéon, tout comme le piano, est un instrument parfaitement adapté à l'expression musicale en solo ; riche et complexe, il permet à l'accordéoniste non seulement de jouer les mélodies, mais également de s'accompagner soi-même. Souvent rangé dans la case "<i>musette</i>", on peut pourtant l'entendre dans de nombreux styles musicaux dans lesquels il s'intègre parfaitement. Choisir un <strong>accordéoniste pour votre soirée</strong> vous permettra d'offrir un répertoire complet et varié à vos invités.
             </p>
 
             <h3 class="section-title section-title--smaller">Accordéon jazz : classe et élégance</h3>
@@ -70,7 +70,7 @@
             </p>
 
             <p>
-                L'accordéon pourra alors tour à tour vous faire danser (valses swing, standards musette, ...), chanter (La Foule, Champs Elysées, Vesoul, ...) ou encore découvrir de nouveaux morceaux dans le style que vous n'aviez peut-être jamais entendu ! <br>
+                Un <strong>accordéoniste à votre soirée</strong> pourra alors tour à tour vous faire danser (valses swing, standards musette, ...), chanter (La Foule, Champs Elysées, Vesoul, ...) ou encore découvrir de nouveaux morceaux dans le style que vous n'aviez peut-être jamais entendu ! <br>
                 Cette formule sera particulièrement adaptée pour un anniversaire, une fête entre amis ou un repas convivial.
             </p>
 
