--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe jazz manouche pour tous vos événements - avec accordéon
+	Groupe jazz manouche pour votre mariage ! (Vin d'honneur, repas, ...)
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un groupe de jazz manouche pour votre vin d'honneur, soirée privée ou cocktail d'entreprise ? Musiciens professionnels, découvrez nos formules.">
+	<meta name="description" content="Vous cherchez un groupe de jazz manouche pour votre mariage ? Musiciens professionnels, découvrez nos formules.">
 {% endblock %}
 
 {% block body %}
@@ -19,29 +19,41 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
-			<h1 class="section-title">Groupe jazz manouche pour vos événements</h1>
+			<h1 class="section-title">Groupe jazz manouche pour votre mariage</h1>
 
             <p>
-                Vous recherchez un groupe de <strong>jazz manouche</strong> pour votre <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ?
+                Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong>groupe de jazz manouche</strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
 			</p>
+
+            <p>
+                Un mariage est un événement particulièrement important dans la vie d'un couple ; vous souhaitez faire de cette soirée un moment inoubliable. Le choix de l'ambiance musicale est essentiel, car elle accompagnera vos invités du vin d'honneur au repas, ou peut-être même pendant la cérémonie.
+            </p>
 
 			<p>
 				Retrouvez l'ambiance des années 30 lors de votre soirée avec notre groupe de musiciens professionnels, au son des standards du style popularisé par Django Reinhardt. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
 			</p>
 
 			<p>
-				Afin de s'adapter au mieux à vos envies et votre budget, nous proposons <strong>différentes formules</strong> (toutes avec un <a href="{{ path('accordeon_jazz_manouche') }}" style="color: #000000;">accordéoniste jazz manouche</a> bien sûr !) à partir du duo (voir ci-dessous) ; nous sommes également complètement autonomes en matériel de sonorisation. Nous nous occupons de tout, vous n'avez plus qu'à apprécier !
+				Afin de s'adapter au mieux à vos envies et votre budget, nous proposons <strong>différentes formules</strong> de groupe jazz manouche pour votre mariage, à partir du duo (voir ci-dessous) ; nous sommes également complètement autonomes en matériel de sonorisation. Nous nous occupons de tout, vous n'avez plus qu'à apprécier !
 			</p>
 
 			<p>
 				N'hésitez plus et <a href="{{ path('contact') }}">contactez-nous</a> pour plus d'informations.
 			</p>
 
-            <h2 class="section-title section-title--small">Duo jazz manouche (accordéon / guitare)</h2>
+            <h2 class="section-title section-title--small">Duo jazz manouche pour votre mariage</h2>
 
             <p>
 				En duo avec l'excellent guitariste Solal Poux, nous vous proposons une formule facile à mettre en place, convenant aux lieux les plus intimistes (et budgets modestes). En acoustique ou légèrement sonorisé, nous assurons le déroulement musical de votre soirée dans une ambiance chic et élégante ; alternant les morceaux virtuoses et les balades langoureuses, le répertoire est varié et plaira à tous !
 			</p>
+
+            <p>
+                L'accordéon et la guitare sont deux instruments qui se complètent très bien, et conviennent parfaitement au répertoire <strong>jazz manouche</strong> ; chaque instrument se faire tour à tour rythmique ou soliste, prenant la place mélodique avant d'accompagner ensuite l'autre musicien.
+            </p>
+
+            <p>
+                Pour votre mariage, nous assurons la musique d'ambiance pendant le vin d'honneur ou lors du repas ; les prestations que nous proposons durent en moyenne 3h, mais nous pouvons bien sûr discuter des horaires en amont. N'hésitez pas à nous demander à l'avance des morceaux spécifiques que vous aimeriez entendre, afin que nous les préparions pour le jour J !
+            </p>
 
             <div class="row">
 				<div class="col-md-6">
@@ -66,11 +78,11 @@
 				</div>
 			</div>
 
-            <h2 class="section-title section-title--small">Trio jazz manouche (accordéon / guitare / contrebasse)</h2>
+            <h2 class="section-title section-title--small">Trio jazz manouche pour votre mariage</h2>
 
 			<p>
-				Le duo s'enrichit d'une contrebasse, permettant une assise plus solide de la rythmique ; l'instrument apporte également une touche visuelle non négligeable pour l'ambiance !
-			</p>
+                Frédéric Debraine rejoint notre duo avec sa contrebasse, assurant une assise rythmique essentielle au style ; l'instrument apporte également une touche visuelle non négligeable, ambiance assurée ! Le son se fait plus <i>complet</i> grâce à l'apport des basses, la rythmique plus pêchue ; une formation réduite qui n'a rien à envier aux grands orchestres !
+            </p>
 
             <div class="row">
                 <div class="col-md-12">
@@ -79,7 +91,7 @@
 					</div>
 
                     <p class="text-center" style="margin-top: 15px;">
-                        Quelques extraits en trio jazz manouche : Bossa Dorado, Autumn Leaves, All of Me, Fly me to the Moon
+                        Quelques extraits en trio jazz manouche : Bossa Dorado, Autumn Leaves, All of Me, All the Things you Are, Fly me to the Moon
                     </p>
                 </div>
             </div>
@@ -102,12 +114,36 @@
                 </li>
 
                 <li>
+                    Swing 42
+                </li>
+
+                <li>
+                    Blues Mineur
+                </li>
+
+                <li>
+                    Les Yeux Noirs
+                </li>
+
+                <li>
                     Ménilmontant
                 </li>
 
 				<li>
 					Indifférence
 				</li>
+
+                <li>
+                    Manoir de mes Rêves
+                </li>
+
+                <li>
+                    Danube (Anniversary Song)
+                </li>
+
+                <li>
+                    All the things you are
+                </li>
 
                 <li>
                     Sunny Side of the Street
@@ -130,9 +166,21 @@
 				</li>
 
                 <li>
+                    Lulu Swing
+                </li>
+
+                <li>
+                    Daphné
+                </li>
+
+                <li>
                     <i>Et bien d'autres...</i>
                 </li>
             </ul>
+
+			<p>
+				Nous nous déplaçons également pour <a href="{{ path('manouche') }}">tous vos événements</a>.
+			</p>
         </div>
 
 
